<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="653dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="363dp"
        android:layout_height="418dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/viewcontainer_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/Weight"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#6A6565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/WeightTextNumber"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/WeightTextNumber"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#6A6565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerWeight"
        app:layout_constraintEnd_toStartOf="@+id/spinnerWeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Weight"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="center_horizontal" />

    <Spinner
        android:id="@+id/spinnerWeight"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/spinner_bg"
        android:gravity="center"
        android:entries="@array/weight"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/WeightTextNumber"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/height"
        android:textColor="#6A6565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/HeightTextNumber"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Spinner
        android:id="@+id/spinnerHeight"
        android:layout_width="102dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/spinner_bg"
        android:entries="@array/height"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/HeightTextNumber"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/HeightTextNumber"
        android:layout_width="138dp"
        android:layout_height="65dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#6A6565"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinnerHeight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Height"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="106dp"
        android:layout_height="29dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/gender"
        android:textColor="#6A6565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/radioButton2"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/male"
        android:textColor="#6A6565"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/radioButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/female"
        android:textColor="#6A6565"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="calculateBmi"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:contentDescription="@string/bmiimagedes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bmi_calculator_bmi_exercise_obesity_weight_512" />

    <TextView
        android:id="@+id/categoryValue"
        android:layout_width="197dp"
        android:layout_height="40dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#6A6565"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bmiNumber"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/bmiNumber"
        android:layout_width="169dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="352dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#6A6565"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/categoryValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>